--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -784,7 +784,7 @@
     <string name="suggested_edits_rewards_contribution"><![CDATA[Wow, that was your %s <b>contribution</b> to Wikipedia with Suggested edits.]]></string>
     <string name="suggested_edits_rewards_edit_strike"><![CDATA[You\'re on a <b>edit streak</b> for %1$s days.  Keep it going, %2$s!]]></string>
     <string name="suggested_edits_rewards_page_views"><![CDATA[Your edits have earned %1$d <b>pageviews</b> in the last %2$s days.]]></string>
-    <string name="suggested_edits_rewards_edit_quality"><![CDATA[Your <b>edit quality</b> is perfect. We look forward to your next edits.]]></string>
+    <string name="suggested_edits_rewards_edit_quality"><![CDATA[Your <b>edit quality</b> is %s. We look forward to your next edits.]]></string>
     <string name="suggested_edits_rewards_continue_button">Continue</string>
     <!-- /Suggested edits -->
 
