--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -396,11 +396,14 @@
     <string name="reading_list_action_menu_remove_all_from_offline">Remove all from offline</string>
     <string name="reading_list_action_menu_save_all_for_offline">Save all for offline</string>
     <string name="reading_list_action_menu_add_to_another_list">Add to another list</string>
+    <string name="reading_list_action_menu_move_to_another_list">Move to another list</string>
     <string name="reading_list_name_sample">My reading list</string>
     <string name="reading_list_name_hint">Name of this list</string>
     <string name="reading_list_description_hint">Description (optional)</string>
     <string name="reading_list_item_deleted">%s removed from list</string>
     <string name="reading_list_items_deleted">%d articles removed from list</string>
+    <string name="reading_list_item_moved">Moved %1$s to %2$s</string>
+    <string name="reading_list_items_moved">Moved %1$d articles to %2$s</string>
     <string name="reading_lists_item_deleted">%s removed from lists</string>
     <string name="reading_list_item_delete_undo">Undo</string>
     <string name="reading_list_deleted">%s deleted</string>
