--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -426,6 +426,7 @@
   <string name="reading_list_article_make_offline">Hint for button that makes a reading list article available for offline use.</string>
   <string name="reading_list_add_to_other_list">Menu item to add an article to another reading list (when the article already exists in one or more lists).</string>
   <string name="reading_list_move_to_other_list">Menu item to move an article to another reading list (when the article already exists in one or more lists).</string>
+  <string name="reading_list_move_from_to_other_list">Menu item to move an article from a specific reading list to another reading list. The %s symbol is replaced with the name of the reading list.</string>
   <string name="reading_list_remove_from_list">Menu item to remove an article from a specific reading list. The %s symbol is replaced with the name of the reading list.</string>
   <string name="reading_list_remove_from_lists">Menu item to remove an article from multiple reading lists to which it might belong.</string>
   <string name="reading_list_select_item">Menu item to select an article for further multiple delete action.</string>
