--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -82,6 +82,9 @@
   <string name="on_this_day_page_share">Text on button to share the On This Day article.\n{{Identical|Share}}</string>
   <string name="reading_list_page_share">Text on button to share an article in a reading list.\n{{Identical|Share}}</string>
   <string name="menu_text_select_edit_here">Menu item caption for editing the current section at the currently highlighted word.</string>
+  <string name="menu_text_select_copy">Menu item caption for copying the current section at the currently highlighted word.</string>
+  <string name="menu_text_select_share">Menu item caption for sharing the current section at the currently highlighted word.</string>
+  <string name="menu_text_select_web_search">Menu item caption for searching the current section on the web at the currently highlighted word.</string>
   <string name="last_updated_text">Message in footer of article indicating when the article was last updated. \'%s\' is substituted with the appropriately formatted human-readable timestamp, such as \"seven days ago\".</string>
   <string name="talk_page_link_text">Link text for accessing Talk pages. Use the same word in your language as is done on the web site, in an action phrase. Some use the term discussions.</string>
   <string name="edit_history_link_text">Action link text for accessing the edit history for the current article.</string>
