--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,9 @@
     <string name="on_this_day_page_share">Share</string>
     <string name="reading_list_page_share">Share</string>
     <string name="menu_text_select_edit_here">Edit here</string>
+    <string name="menu_text_select_copy">Copy</string>
+    <string name="menu_text_select_share">Share</string>
+    <string name="menu_text_select_web_search">Web search</string>
 
     <string name="last_updated_text">Last updated %s</string>
     <string name="talk_page_link_text">View talk page</string>
